@@ -121,7 +121,7 @@ usb_printer_device_c::usb_printer_device_c(usbdev_type type, const char *filenam
   s.fname = filename;
   s.fp = NULL;
 
-  put("usb_printer", "USBPR");
+  put("usb_printer", "USBPRN");
 }
 
 usb_printer_device_c::~usb_printer_device_c(void)
